tests/miz/pass/theorems/pass_theorems_implication_identity_001.miz
theorem
  (1 = 1 implies 1 = 1);
proof
end;
