tests/miz/fail/overload/fail_overload_ambiguous_functor_001.miz
definition
  func value(set) -> set;
  func value(object) -> set;
end;

theorem
  value({}) = value({});
proof
end;
